--- a/src/shared/ui/components/placeholder/placeholder-content.scss
+++ b/src/shared/ui/components/placeholder/placeholder-content.scss
@@ -4,7 +4,7 @@
 .Placeholder-content {
     padding: size.$gap;
     text-align: center;
-    font-size: calc(size.$large-text * 1.5);
+    font-size: 1.5 * size.$large-text;
 
     &--unknownError {
         color: darken(color.$red, 20);
