--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -4,7 +4,8 @@
 
 .near-ft-transfer-task,
 .near-deposit-and-stake-task,
-.near-unstake-task {
+.near-unstake-task,
+.near-withdraw-task {
     background: color.$lightest;
     .name {
         color: color.$text !important;
