--- a/src/pages/dao/funds/funds.scss
+++ b/src/pages/dao/funds/funds.scss
@@ -12,5 +12,12 @@
         padding-bottom: size.$gap;
         position: relative;
         overflow: hidden;
+        .Table-row-content--compact {
+            &:not(&:first-of-type) {
+                span:last-of-type {
+                    font-family: font.$code;
+                }
+            }
+        }
     }
 }
