--- a/src/shared/ui/components/table/row.scss
+++ b/src/shared/ui/components/table/row.scss
@@ -62,6 +62,12 @@
             &:not(:first-of-type) {
                 padding: 0.5 * size.$gap size.$gap;
                 background-color: rgba(color.$lightest, 0.7);
+                & > span:last-of-type {
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    padding-left: 1.5rem;
+                    overflow: hidden;
+                }
             }
 
             &:nth-of-type(2) {
