--- a/src/widgets/dao-config-editor/ui/dao-config-editor.scss
+++ b/src/widgets/dao-config-editor/ui/dao-config-editor.scss
@@ -4,6 +4,7 @@
 @use "sass/size";
 
 .DaoConfigEditor {
+    grid-area: DaoConfigEditor;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 6fr 4fr;
