--- a/src/pages/dao/jobs/jobs.scss
+++ b/src/pages/dao/jobs/jobs.scss
@@ -1,20 +1,9 @@
-@use "sass/color";
-@use "sass/font";
-@use "sass/size";
-
 .DaoJobsTab {
     display: grid;
-    grid-template: "jobsList " auto / 100%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 
-    &-jobsList {
-        grid-area: jobsList;
-
-        .Table-row-content--compact {
-            &:not(&:first-of-type) {
-                span:last-of-type {
-                    font-family: font.$code;
-                }
-            }
-        }
-    }
+    grid-template-areas:
+        "JobsTable JobsTable"
+        "JobsTable JobsTable";
 }
