wip: Update config editor

--- a/src/pages/dao/config/config.scss
+++ b/src/pages/dao/config/config.scss
@@ -4,6 +4,6 @@
     grid-template-rows: 1fr 1fr;
 
     grid-template-areas:
-        "DaoConfigEditor DaoConfigEditor"
-        "DaoConfigEditor DaoConfigEditor";
+        "MulticallConfigEditor MulticallConfigEditor"
+        "MulticallConfigEditor MulticallConfigEditor";
 }
