Jobs scheduling and UI/UX improvements (#165)
* wip: Rework tabs

* wip: Rework dao page layout

* chore: Clarify naming

* wip: Update tab buttons style

* wip: Center pending animation and error message

* fix: Add undefined table row workaround

* use multicall class in wallet component

* Update token label component

* chore: Use consistent field name for `Multicall` address

* chore: Add equality check for `Args`
& Add sub-account address getter for `ArgsAccount`

* Create separate FT balances component placeholder

* chore: Fix Args equality checker

* chore: Use named export

* feat: Implement fungible token balances lazy loading

* Fix generic token icon rendering

* chore: Move balances conversion into model

* chore: Remove empty unused file

* wip: Fix loader styles

* wip: Allow to pass nullish values as table rows

* feat: Add loading animation for balances

* wip: Add global `disabled` style

* fix: Disable dapp multicall login if DAO has no multicall instance

* chore: Convert `Dialog` to TS FC

* wip: Add regexp URL validation

* chore: Use meaningful naming

* wip: Add `ArgsError` reactivity hook

* wip: Rework `Dialog` in order to support reactive props

* wip: Use reactive `ArgsError` in dApp login dialog

* chore: Use `URL` constructor for URL strings validation

* wip: Use reactive `ArgsError` binding in every dialog

* fix: Display only 1st error message under text field
& Use named MUI imports

* chore: Add proposal existence checker

* feat: Update `ArgsError` reactive API

* fix: Resolve `Dialog` implementation overhead & issues

* wip: Use updated APIs in dialogs

* chore: Add TSDoc comment

* chore: Remove duplicated object key

* chore: Reference reactive value

* wip: Update `LoadFromProposalDialog`

* chore: Clarify naming

* wip: Update errors text

* wip: Fix error handling

* update styling

* chore: Use `clsx`

* fix: Make multicall dApp login

--- a/src/shared/ui/components/icon-label/icon-label.scss
+++ b/src/shared/ui/components/icon-label/icon-label.scss
@@ -1,20 +1,27 @@
 @use "sass/mixin";
 @use "sass/size";
 
-.TokenLabel {
+.IconLabel {
     display: flex;
     align-items: center;
-    gap: size.$gap;
+    gap: 0.6 * size.$gap;
+    line-height: 0;
 
     &-icon {
-        width: 1.5 * size.$gap;
-        height: 1.5 * size.$gap;
+        width: fit-content;
+        height: fit-content;
         cursor: default !important;
         border-radius: 50%;
         box-shadow: 0px 5px 11px -3px rgba(0, 0, 0, 0.1);
+
+        & > img,
+        & > svg {
+            width: 1.5 * size.$gap;
+            height: 1.5 * size.$gap;
+        }
     }
 
-    &-symbol {
+    &-label {
         font-weight: bold;
     }
 }
