--- a/src/shared/ui/components/tile/tile.scss
+++ b/src/shared/ui/components/tile/tile.scss
@@ -5,9 +5,9 @@
     display: flex;
     flex-flow: column nowrap;
     position: relative;
-    padding: calc(0.25 * size.$gap);
-    background-color: rgba(color.$lightest, 0.25);
+    padding: 0.25 * size.$gap;
     border-radius: size.$task-radius;
+    background-color: color.$lightest;
     font-size: size.$small-text;
 
     .title {
