--- a/src/pages/dao/dao.scss
+++ b/src/pages/dao/dao.scss
@@ -76,7 +76,7 @@
         background-color: color.$light;
     }
 
-    &-body {
+    &-content {
         @include mixin.full;
         gap: size.$gap;
         padding: size.$gap;
