added storage_withdraw and storage_unregister

--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -3,7 +3,8 @@
 @use "sass/size";
 
 .near-ft-transfer-task,
-.near-storage-withdraw-task {
+.near-storage-withdraw-task,
+.near-storage-unregister-task {
     background: color.$lightest;
     .name {
         color: color.$text !important;
