--- a/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
+++ b/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
@@ -3,8 +3,8 @@
 @use "sass/mixin";
 @use "sass/size";
 
-.MulticallConfigEditor {
-    grid-area: MulticallConfigEditor;
+.MIEntityConfigEditor {
+    grid-area: MIEntityConfigEditor;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 6fr 4fr;
