wip: Update config editing logic & styles

--- a/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
+++ b/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
@@ -21,9 +21,12 @@
             @include mixin.center-items(space-evenly, center);
 
             .ButtonGroup {
-                justify-content: center;
-                margin-top: 0;
+                display: none;
             }
+        }
+
+        p {
+            font-size: size.$text;
         }
     }
 
