wip: Create jobs settings edit feature

--- a/src/pages/dao/config/config.scss
+++ b/src/pages/dao/config/config.scss
@@ -4,6 +4,6 @@
     grid-template-rows: 1fr 1fr;
 
     grid-template-areas:
-        "MIEntityConfigEditor MIEntityConfigEditor"
-        "MIEntityConfigEditor MIEntityConfigEditor";
+        "MulticallConfigEditor MulticallConfigEditor"
+        "MulticallConfigEditor MulticallConfigEditor";
 }
