--- a/src/widgets/export/export.scss
+++ b/src/widgets/export/export.scss
@@ -237,15 +237,9 @@
 
                     legend {
                         background-color: color.$black;
-                        margin-left: -2px;
-                        padding: 2px;
                         border-radius: 20px;
+                        padding: 0.15rem;
                         visibility: visible;
-                    }
-
-                    legend > span {
-                        font-size: 0.75em;
-                        visibility: hidden;
                     }
                 }
 
@@ -280,7 +274,6 @@
 
             *:not(input) {
                 color: color.$light-text;
-                font-size: 1em;
             }
 
             width: 100%;
