wip: Set MUI textfield font size to default globally

--- a/src/global.scss
+++ b/src/global.scss
@@ -41,7 +41,7 @@ button {
 .MuiTextField-root {
     .MuiInputLabel-root,
     .MuiInputBase-root {
-        font-size: 1em;
+        font-size: size.$text;
     }
 }
 
