fix: Override global font-size

--- a/src/pages/dao/dao.scss
+++ b/src/pages/dao/dao.scss
@@ -36,6 +36,7 @@
                     input {
                         padding: 0;
                         padding-left: 0.5 * size.$gap;
+                        font-size: 1em;
                     }
 
                     &.Mui-error {
