wip: Fix job settings form behavior & apply minor changes

--- a/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
+++ b/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
@@ -19,7 +19,8 @@
 
         p {
             @include mixin.center-items();
-            font-size: size.$text;
+            text-align: center;
+            font-size: size.$large-text;
         }
 
         form {
