--- a/src/shared/ui/components/icon-label/icon-label.scss
+++ b/src/shared/ui/components/icon-label/icon-label.scss
@@ -3,9 +3,14 @@
 
 .IconLabel {
     display: flex;
+    flex-direction: row;
     align-items: center;
     gap: 0.6 * size.$gap;
     line-height: 0;
+
+    &--reversed {
+        flex-direction: row-reverse;
+    }
 
     &--symbolic {
         line-height: 1;
