feat: Allow tables to have selectable rows

--- a/src/shared/ui/components/data-inspector/data-inspector.scss
+++ b/src/shared/ui/components/data-inspector/data-inspector.scss
@@ -4,6 +4,8 @@
 @use "sass/font";
 
 .DataInspector {
+    text-align: start;
+
     &-label {
         color: darken(color.$blue, 30%);
         cursor: pointer;
