wip: Update MUI checkbox global styles

--- a/src/global.scss
+++ b/src/global.scss
@@ -40,8 +40,8 @@ button {
 
 .MuiCheckbox-root {
     .MuiSvgIcon-root {
-        width: 2rem;
-        height: 2rem;
+        width: size.$large-text;
+        height: size.$large-text;
     }
 }
 
