wip: Update table row selection logic & styles

--- a/src/shared/ui/components/table/row.scss
+++ b/src/shared/ui/components/table/row.scss
@@ -159,5 +159,15 @@
                 }
             }
         }
+
+        &--compact &-slot {
+            &--start {
+                display: flex;
+
+                .MuiCheckbox-root {
+                    padding: calc(size.$text / 4);
+                }
+            }
+        }
     }
 }
