--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -4,6 +4,7 @@
 
 .near-ft-transfer-task,
 .near-storage-withdraw-task,
+.near-storage-deposit-task,
 .near-storage-unregister-task {
     background: color.$lightest;
     .name {
