Card/deposit and stake (#169)
* add staking pool contract TS class

* add deposit and stake card

* add unstake to cards column

* add withdraw-stake card

* fix: show error when trying to unstake more than available

* use InfoField in unstake card

* seaparate withdraw stake and unstake logic, fix null check on args-big

* fix react caching for form

* Use info field for validator fee

Co-authored-by: mohamedalichelbi <mohamedalichelbi123@gmail.com>

--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -2,7 +2,10 @@
 @use "sass/mixin";
 @use "sass/size";
 
-.near-ft-transfer-task {
+.near-ft-transfer-task,
+.near-deposit-and-stake-task,
+.near-unstake-task,
+.near-withdraw-task {
     background: color.$lightest;
     .name {
         color: color.$text !important;
