--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -3,6 +3,9 @@
 @use "sass/size";
 
 .near-ft-transfer-task,
+.near-ft-transfer-call-task,
+.near-mft-transfer-task,
+.near-mft-transfer-call-task,
 .near-deposit-and-stake-task,
 .near-unstake-task,
 .near-withdraw-task {
