Card/storage withdraw (#172)
* wip: implement storage-withdraw card

* added storage_withdraw card

* use token data in  transform

* added storage_withdraw and storage_unregister

* implement storage-deposit card

* fix: use amount as deposit

* fix: show total storageBalance instead of available

* adjust default has

--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -3,6 +3,9 @@
 @use "sass/size";
 
 .near-ft-transfer-task,
+.near-storage-withdraw-task,
+.near-storage-deposit-task,
+.near-storage-unregister-task,
 .near-ft-transfer-call-task,
 .near-mft-transfer-task,
 .near-mft-transfer-call-task,
