--- a/src/shared/ui/components/tile/tile.scss
+++ b/src/shared/ui/components/tile/tile.scss
@@ -23,14 +23,14 @@
         }
 
         &-corner {
-            &--left,
-            &--right {
+            &--start,
+            &--end {
                 .MuiButtonBase-root {
                     padding: 4px;
                 }
             }
 
-            &--right {
+            &--end {
                 margin-left: auto;
             }
         }
