wip: Update compact table row slot styles

--- a/src/shared/ui/components/table/row.scss
+++ b/src/shared/ui/components/table/row.scss
@@ -169,10 +169,15 @@
         }
 
         &--compact &-slot {
+            display: flex;
+            align-items: center;
+
             &--start {
+                justify-content: start;
             }
 
             &--end {
+                justify-content: end;
             }
         }
     }
