wip: Fix token lists cross-checking & update styles

--- a/src/shared/ui/components/table/row.scss
+++ b/src/shared/ui/components/table/row.scss
@@ -108,7 +108,7 @@
                             display: none;
                         }
 
-                        &:last-child {
+                        &:last-of-type {
                             font-size: size.$large-text;
                         }
                     }
@@ -178,6 +178,10 @@
 
             &--end {
                 justify-content: end;
+            }
+
+            > * {
+                position: absolute;
             }
         }
     }
