--- a/src/shared/ui/components/table/table.scss
+++ b/src/shared/ui/components/table/table.scss
@@ -39,4 +39,8 @@
         flex-flow: column nowrap;
         gap: size.$gap;
     }
+
+    &--compact.Table--dense {
+        gap: calc(size.$gap / 2);
+    }
 }
