implement NFT transfer card

--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -7,6 +7,7 @@
 .near-storage-deposit-task,
 .near-storage-unregister-task,
 .near-ft-transfer-call-task,
+.near-nft-transfer-task,
 .near-mft-transfer-task,
 .near-mft-transfer-call-task,
 .near-deposit-and-stake-task,
