--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -8,6 +8,7 @@
 .near-storage-unregister-task,
 .near-ft-transfer-call-task,
 .near-nft-transfer-task,
+.near-nft-transfer-call-task,
 .near-mft-transfer-task,
 .near-mft-transfer-call-task,
 .near-deposit-and-stake-task,
