fix image upload in create store card

--- a/src/families/mintbase/mintbase.scss
+++ b/src/families/mintbase/mintbase.scss
@@ -1,6 +1,7 @@
 @use "sass/color";
 
-.mintbase-create-store-task {
+.mintbase-create-store-task,
+.mintbase-transfer-store-ownership-task {
     background-image: url("../../app/static/mintbase.png");
     background-position-x: 60rem;
     background-position-y: 60rem;
