new cards to add/remove minter

--- a/src/families/mintbase/mintbase.scss
+++ b/src/families/mintbase/mintbase.scss
@@ -1,7 +1,9 @@
 @use "sass/color";
 
 .mintbase-create-store-task,
-.mintbase-transfer-store-ownership-task {
+.mintbase-transfer-store-ownership-task,
+.mintbase-add-minter-task,
+.mintbase-remove-minter-task {
     background-image: url("../../app/static/mintbase.png");
     background-position-x: 60rem;
     background-position-y: 60rem;
